--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Conversor de Texto</title>
         <meta charset="utf-8">
+	<link rel="icon" href="./icon.png">
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
